# CSCI3593-Computer-Organization

./: GithubAccessToken.txt  README.md
Phase_2/: Phase2.txt
Phase_3/phase3_ia_riscv32i/libs/newlib/libgloss/: crt1.S
Phase_3/phase3_ia_riscv32i/libs/startup/: crt0.S
Phase_3/phase3_ia_riscv32i/model/ia/events/: ia_main_reset.codal
Phase_3/phase3_ia_riscv32i/model/ia/other/: ia_utils.codal
Phase_3/phase3_ia_riscv32i/model/share/isa/: isa.codal
Phase_3/phase3_ia_riscv32i/model/share/resources/: memory.codal
Phase_3/phase3_ia_riscv32i/work/: .build.json.db
Phase_3/phase3_ia_riscv32i/work/ia/: phase3_ia_riscv32i-ia.xml
Phase_3/phase3_ia_riscv32i/work/ia/compiler/Codasip/: ABI.txt  CodasipCustSelDAG.inc  CodasipCustomCallC.td  CodasipISelDAGToDAG.cpp  CodasipISelLowering.cpp  CodasipInstructionSemantics.cpp  CodasipInstructionSemantics.h  CodasipJumpInfo.h  CodasipMicroClasses.td  CodasipSequencer.cpp  CodasipSubtarget.cpp  CodasipVliwNoopAdder.cpp
Phase_3/phase3_ia_riscv32i/work/ia/llvm/llvm/: CMakeLists.txt
Phase_3/phase3_ia_riscv32i/work/ia/optimizer/codasip_tti/: llvm_CodasipGenTTIImpl.h
Phase_3/phase3_ia_riscv32i/work/ia/sdk/include/: inlines.h
Phase_3/phase3_ia_riscv32i/work/ia/semantics/: compiler.sem
Phase_3/phase3_ia_riscv32i/work/tmp/semantics/: 010_after_frontend.bc  035.ll  036.ll  089.ll  090.ll  110.ll  220.ll  245.ll  246.ll  300_llc_extr_input.ll  opt.sem  se_instrsem.c  semextr.sem
Phase_3/phase3_ia_riscv32i/work/tmp/tti/: .ninja_log  CMakeCache.txt  rules.ninja
Phase_3/regression/: studioincloud-config.json
Phase_3/regression/Debug/: makefile  objects.mk  sources.mk
Phase_3/regression/Debug/src/: subdir.mk
Phase_3/regression/phase3_ia_riscv32i/: codal.conf  ip.conf  options.conf  studioincloud-config.json
Phase_3/regression/phase3_ia_riscv32i/model/share/include/: opcodes.hcodal
Phase_3/regression/phase3_ia_riscv32i/work/: phase3_ia_riscv32i_options.hcodal
Phase_3/regression/src/: regression.s
Phase_5/cu_riscv32i_cycle_accurate/model/ca/decoders/: ca_decoder.codal
Phase_5/cu_riscv32i_cycle_accurate/model/ca/include/: ca_defines.hcodal
Phase_5/cu_riscv32i_cycle_accurate/model/ca/pipelines/: ca_pipe2_id.codal  ca_pipe3_ex.codal  ca_pipe4_me.codal  ca_pipe5_wb.codal
Phase_5/cu_riscv32i_cycle_accurate/model/ca/resources/: ca_resources.codal
Phase_5/cu_riscv32i_cycle_accurate/work/: .build.json.db  tasks.py
Phase_5/cu_riscv32i_cycle_accurate/work/ca/: cu_riscv32i_cycle_accurate-ca.xml  cu_riscv32i_cycle_accurate.ca.watermark
Phase_5/cu_riscv32i_cycle_accurate/work/ca/profiler/: decoders.txt
Phase_5/cu_riscv32i_cycle_accurate/work/ca/simulator/: Resources.txt  Scheduling.txt
Phase_5/cu_riscv32i_cycle_accurate/work/ia/: cu_riscv32i_cycle_accurate.ia.watermark
Phase_5/cu_riscv32i_cycle_accurate/work/ia/llvm/llvm/tools/gold/: CMakeLists.txt  LLVMBuild.txt
Phase_5/cu_riscv32i_cycle_accurate/work/ia/llvm/llvm/tools/llc/: CMakeLists.txt
Phase_5/cu_riscv32i_cycle_accurate/work/ia/llvm/llvm/tools/llvm-mc/: CMakeLists.txt
Phase_5/cu_riscv32i_cycle_accurate/work/ia/llvm/llvm/tools/llvm-objdump/: CMakeLists.txt
Phase_5/cu_riscv32i_cycle_accurate/work/ia/optimizer/codasip_tti/: CMakeLists.txt  CodasipTTI.cpp  llvm_CodasipGenTTIImpl.cpp  llvm_CodasipGenTTIImpl.h  llvm_CodasipTTIImpl.cpp  llvm_CodasipTTIImpl.h
Phase_5/cu_riscv32i_cycle_accurate/work/ia/semantics/: compiler.sem
Phase_5/cu_riscv32i_cycle_accurate/work/tmp/semantics/: 010_after_frontend.bc  015.ll  020.ll  030.ll  050.ll  060.ll  090.ll  101.ll  103.ll  110.ll  200.ll  203.ll  230.ll  235.ll  245.ll  250.ll  300_llc_extr_input.ll  dag_reference  llc_semantics_sections.txt  se_instrsem.c  se_memreg.txt
Phase_5/cu_riscv32i_cycle_accurate/work/tmp/tti/: .ninja_deps  .ninja_log  build.ninja  rules.ninja
Phase_6/cu_riscv32i_cycle_accurate/model/ca/decoders/: ca_decoder.codal
Phase_6/cu_riscv32i_cycle_accurate/model/ca/include/: ca_defines.hcodal
Phase_6/cu_riscv32i_cycle_accurate/model/ca/pipelines/: ca_pipe2_id.codal
Phase_6/cu_riscv32i_cycle_accurate/model/ca/resources/: ca_resources.codal
Phase_7/cu_riscv32i_cycle_accurate/model/ca/decoders/: ca_decoder.codal
Phase_7/cu_riscv32i_cycle_accurate/model/ca/include/: ca_defines.hcodal
Phase_7/cu_riscv32i_cycle_accurate/model/ca/pipelines/: ca_pipe2_id.codal  ca_pipe3_ex.codal  ca_pipe4_me.codal  ca_pipe_control.codal
Phase_7/cu_riscv32i_cycle_accurate/model/ca/resources/: ca_resources.codal
Phase_7/cu_riscv32i_cycle_accurate/work/: .build.json.db
Phase_7/cu_riscv32i_cycle_accurate/work/ia/: cu_riscv32i_cycle_accurate-ia.xml
Phase_7/cu_riscv32i_cycle_accurate/work/tmp/semantics/: 036.ll  070.ll  085.ll  089.ll
Phase_7/cu_riscv32i_cycle_accurate/work/tmp/tti/: .ninja_deps  .ninja_log
Phase_8/cu_riscv32i_cycle_accurate/model/ca/decoders/: ca_decoder.codal
Phase_8/cu_riscv32i_cycle_accurate/model/ca/include/: ca_defines.hcodal
Phase_8/cu_riscv32i_cycle_accurate/model/ca/pipelines/: ca_pipe1_if.codal  ca_pipe2_id.codal  ca_pipe3_ex.codal  ca_pipe4_me.codal  ca_pipe5_wb.codal  ca_pipe_control.codal
Phase_8/cu_riscv32i_cycle_accurate/model/ca/resources/: ca_resources.codal
Phase_8/cu_riscv32i_cycle_accurate/work/: .build.json.db  cu_riscv32i_cycle_accurate_options.hcodal
Phase_8/cu_riscv32i_cycle_accurate/work/ca/: cu_riscv32i_cycle_accurate-ca.xml  cu_riscv32i_cycle_accurate.ca.watermark
Phase_8/cu_riscv32i_cycle_accurate/work/ca/profiler/: decoders.txt
Phase_8/cu_riscv32i_cycle_accurate/work/ca/sdk/: sdk.xml
Phase_8/cu_riscv32i_cycle_accurate/work/ca/simulator/: Resources.txt  Scheduling.txt  index.html
Phase_8/cu_riscv32i_cycle_accurate/work/ia/compiler/: clang_args.txt
Phase_8/cu_riscv32i_cycle_accurate/work/ia/profiler/: decoders.txt
Phase_8/cu_riscv32i_cycle_accurate/work/ia/sdk/: sdk.xml
Phase_8/cu_riscv32i_cycle_accurate/work/tmp/semantics/: 098.ll  115.ll  opt.sem  semextr.sem
Phase_8/cu_riscv32i_cycle_accurate/work/tmp/tti/: .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  install_manifest.txt
(+726 files in other folders)
